--- a/Rabitebankcopy/index.html
+++ b/Rabitebankcopy/index.html
@@ -57,12 +57,12 @@
             <div class="menu">
                 <ul class="topmenu">
                     <li> <a href="">Kreditlər</a></li>
-                    <li> <a href="">Əmanətlər</a></li>
+                    <li> <a href="/Emanetler.html">Əmanətlər</a></li>
                     <li> <a href="">Kartmane</a></li>
-                    <li> <a href="">Online Xidmətlər</a></li>
-                    <li> <a href="">Pul Köçürmələri</a></li>
-                    <li> <a href="">Kampaniyalar</a></li>
-                    <li> <a href="">Xidmət Şəbəkəsi</a></li>
+                    <li> <a href="xidmetler.html">Online Xidmətlər</a></li>
+                    <li> <a href="/Emanetler.html">Pul Köçürmələri</a></li>
+                    <li> <a href="kampanyalar.html">Kampaniyalar</a></li>
+                    <li> <a href="xidmetsebeke.html">Xidmət Şəbəkəsi</a></li>
 
                 </ul>
             </div>
@@ -181,12 +181,8 @@
 <span>12</span>
 <input type="range" class="range" >
 </div>
-<div class="kredit-mebleg-2">
 
-</div>
-<div class="kredit-mebleg-3">
 
-</div>
     </div>
 
     <div class="kredit-odenis">
@@ -290,10 +286,14 @@
 </div>
 <div class="footer-bottom-end">
 <div class="end-left">
-
+    <p>Rabitəbank ASC Azərbaycan Mərkəzi Bankın 136 saylı lisenziyası <br> əsasında fəaliyyət göstərir. © Rabitəbank 2019</p>
 </div>
 <div class="end-right">
-
+    
+   <a href=""> <i class="fab fa-facebook-f"></i></a>
+  <a href="">  <i class="fab fa-twitter"></i></a>
+  <a href="">   <i class="fab fa-instagram"></i></a>
+  <a href="">    <i class="fab fa-youtube"></i></a>
 </div>
 
 </div>
