--- a/Rabitebankcopy/index.html
+++ b/Rabitebankcopy/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/font.css">
     <script src="https://kit.fontawesome.com/6ff3f42b45.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/font/FontsFree-Net-SFProText-Regular.ttf">
-    <link rel="stylesheet" href="/font/FontsFree-Net-SFProText-Semibold (1).ttf">
+ 
     <title>Rabite Bank</title>
 </head>
 
@@ -56,13 +56,13 @@
         <div class="container2">
             <div class="menu">
                 <ul class="topmenu">
-                    <li> <a href="">Kreditlər</a></li>
+                    <li> <a href="kreditler.html">Kreditlər</a></li>
                     <li> <a href="/Emanetler.html">Əmanətlər</a></li>
                     <li> <a href="">Kartmane</a></li>
                     <li> <a href="xidmetler.html">Online Xidmətlər</a></li>
                     <li> <a href="/Emanetler.html">Pul Köçürmələri</a></li>
                     <li> <a href="kampanyalar.html">Kampaniyalar</a></li>
-                    <li> <a href="xidmetsebeke.html">Xidmət Şəbəkəsi</a></li>
+                    <li> <a href="/xidmetsebeke.html">Xidmət Şəbəkəsi</a></li>
 
                 </ul>
             </div>
