--- a/Rabitebankcopy/index.html
+++ b/Rabitebankcopy/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/font.css"> 
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="/css/font.css">
     <script src="https://kit.fontawesome.com/6ff3f42b45.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
  
@@ -68,6 +68,20 @@
             </div>
         </div>
     </nav>
+
+    <div class="right-btn">
+        <button type="button" class="btn ">
+             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="22" viewBox="0 0 30 22" class="open">
+                 <path fill="#FFF" fill-rule="nonzero" stroke="#FFF" stroke-width=".8" d="M18.775 2.565c4.737 0 8.593 3.765 8.613 8.4v8.47H11.226c-4.75 0-8.614-3.784-8.614-8.435 0-4.652 3.864-8.436 8.614-8.436h7.549zm0-1.565h-7.549C5.578 1 1 5.477 1 11c0 5.524 4.578 10 10.226 10H29v-9.984V11c0-5.523-4.577-10-10.225-10z">
+
+                 </path>
+                 </svg>
+                </button>
+    </div>
+
+
+
+
     <main>
         <div class="main-left">
             <h3>Qış Kampaniyası krediti</h3>
