--- a/Rabitebankcopy/xidmetsebeke.html
+++ b/Rabitebankcopy/xidmetsebeke.html
@@ -56,18 +56,29 @@
         <div class="container2">
             <div class="menu">
                 <ul class="topmenu">
-                    <li> <a href="">Kreditlər</a></li>
-                    <li> <a href="Emanetler.html">Əmanətlər</a></li>
+                    <li> <a href="/kreditler.html">Kreditlər</a></li>
+                    <li> <a href="/Emanetler.html">Əmanətlər</a></li>
                     <li> <a href="">Kartmane</a></li>
-                    <li> <a href="xidmetler.html">Online Xidmətlər</a></li>
-                    <li> <a href="pul.html">Pul Köçürmələri</a></li>
-                    <li> <a href="kampanyalar.html">Kampaniyalar</a></li>
-                    <li> <a href="xidmetsebeke.html">Xidmət Şəbəkəsi</a></li>
+                    <li> <a href="/xidmetler.html">Online Xidmətlər</a></li>
+                    <li> <a href="/pul.html">Pul Köçürmələri</a></li>
+                    <li> <a href="/kampanyalar.html">Kampaniyalar</a></li>
+                    <li> <a href="/xidmetsebeke.html">Xidmət Şəbəkəsi</a></li>
 
                 </ul>
             </div>
         </div>
     </nav>
+
+
+    <div class="right-btn">
+        <button type="button" class="btn-message ">
+             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="22" viewBox="0 0 30 22" class="open">
+                 <path fill="#FFF" fill-rule="nonzero" stroke="#FFF" stroke-width=".8" d="M18.775 2.565c4.737 0 8.593 3.765 8.613 8.4v8.47H11.226c-4.75 0-8.614-3.784-8.614-8.435 0-4.652 3.864-8.436 8.614-8.436h7.549zm0-1.565h-7.549C5.578 1 1 5.477 1 11c0 5.524 4.578 10 10.226 10H29v-9.984V11c0-5.523-4.577-10-10.225-10z">
+
+                 </path>
+                 </svg>
+                </button>
+    </div>
     <div class="banner">
         <h1>Filiallar</h1>
     </div>
